--- a/_css/master.css
+++ b/_css/master.css
@@ -18,14 +18,14 @@ footer {
 
 div.splash {
 	position: relative;
-	/*top: 128px;
-	left: 64px;*/
 	margin: 48px auto;
 	width: 80%;
+	height: 80%;
 	border: 1px solid red;
 	border-radius: 16px;
-	background-color: darkgray;
-	color: blue;
+	background-color: rgba(64,64,64,.6);
+
+	color: gold;
 	padding: 12px 24px;
 	pointer-events: auto;
 }
@@ -44,7 +44,6 @@ div.splash div {
 
 header {
 	margin: 12px 24px;
-	background-color: inherit;
 	color: white;
 	/*font-size: 1.5em;*/
     -webkit-text-stroke-width: 1px;
@@ -77,7 +76,11 @@ div.modalBox {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+	/*background: rgba(0,0,0,0.8);*/
+	background-image: url("../_images/background1.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
 	z-index: 9999;
 	opacity:1;
 	-webkit-transition: opacity 400ms ease-in;
@@ -135,6 +138,10 @@ form input[type="button"], form a {
 }
 .red {
 	color: indianred;
+}
+
+.white {
+	color: white;
 }
 
 .center {
