Made a bunch of changes to the game display to automatically have the viewport be a 100% of viewable. Modified all remaining variables not already done to use a master global object. Changes to CSS to allow for scrolling on modal box. Changed globally how crafty scaling works, eliminated it and added my own by multiplying all objects by scale variable. Number of other things too

--- a/_css/master.css
+++ b/_css/master.css
@@ -21,7 +21,7 @@ div.splash {
 	position: relative;
 	margin: 48px auto;
 	width: 80%;
-	height: 80%;
+	/*height: 80%;*/
 	border: 1px solid red;
 	border-radius: 16px;
 	background-color: rgba(64,64,64,.6);
@@ -71,7 +71,7 @@ div[id="splashLevel"], div[id="splashEnd"] {
 
 /* Code for Modal Styling */
 div.modalBox {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -125,6 +125,10 @@ form fieldset legend {
 form fieldset div p {
 	display: inline-block;
 	width: 264px;
+}
+
+form fieldset input {
+	width: 224px;
 }
 
 form input[type="button"], form a {
