Streamlined code to remove redunduncies - removed 1 JS file by using game level variable and adding elements that are additional. Added extensive options for ship 2 controls. Updated text in Splash to reflect changes. Other small tweaks

--- a/_css/master.css
+++ b/_css/master.css
@@ -137,6 +137,18 @@ form input[type="button"], form a {
 	font-size: 1em;
 }
 
+form fieldset .checkboxList p {
+	width: auto;
+}
+
+form input[type="checkbox"] {
+	width: 48px;
+}
+
+form input[type="radio"] {
+	width: 48px;
+}
+
 .black {
 	color: black;
 }
